[2단계 - 사다리 게임 실행] 이준섭 미션 제출합니다. (#2)
* refactor: RungCreateDecider를 인터페이스로 변경

* docs: 2단계 - 사다리 게임 실행 기능 요구사항 및 설계 정리

* fix: retrun 구조 오류 메세지 수정

* refactor: 반환 변수 인라인화

* feat: 실행 결과(상금)를 입력 받는 기능 구현

* feat: 결과를 보고 싶은 사람을 입력받는 기능 구현

* test: 결과(상금)에 공백이 포함되는 경우 예외 처리하는 기능 테스트

* feat: 결과(상금)에 공백이 포함되는 경우 예외 처리하는 기능 테스트를 통과하는 기능 구현

* test: 결과(상금)이 5글자를 초과하는 경우 예외 처리하는 기능 테스트

* feat: 결과(상금)이 5글자를 초과하는 경우 예외 처리하는 기능 테스트를 통과하는 기능 구현

* test: 결과(상금)에 'all' 이 포함되는 경우 예외 처리하는 기능 테스트

* feat: 결과(상금)에 'all' 이 포함되는 경우 예외 처리하는 기능 테스트를 통과하는 기능 구현

* docs: Prize 클래스 기능 구현 목록 확인

* test: 결과의 수와 참여자의 수가 일치하지 않는 경우 예외 처리하는지 테스트

* feat: 결과의 수와 참여자의 수가 일치하지 않는 경우 예외 처리하는 기능 테스트를 통과하는 기능 구현

* fix: Prizes 생성자와 유효성 검사의 매개변수 순서 변경

* feat: 실행 결과(상금)을 받아 상금 목록을 만드는 기능 구현

* fix: 시그니처 변경 및 컨벤션 수정

* test: 실행 결과 계산 기능 테스트

* feat: 실행 결과 계산 기능 테스트를 통과하는 기능 구현

* test: 참여자의 이름에 all 이 포함되는 경우 예외 처리하는 기능 테스트

* feat: 참여자의 이름에 all 이 포함되는 경우 예외 처리하는 기능 테스트를 통과하는 기능 구현

* test: 결과를 보고 싶은 사람을 참여자 목록에 존재하지 않을 경우 예외 처리하는 기능 테스트

* feat: 결과를 보고 싶은 사람을 참여자 목록에 존재하지 않을 경우 예외 처리하는 기능 테스트를 통과하는 기능 구현

* test: 참여자와 실행 결과를 받아 올바르게 계산하고 매칭하는 기능 테스트

* feat: 참여자와 실행 결과를 받아 올바르게 계산하고 매칭하는 기능 테스트를 통과하는 기능 구현

* fix: List.copyOf 로 수정

* fix: 3항 연산자를 사용하지 않도록 수정

* feat: 사다리와 함께 실행 결과(상금)을 출력하는 메서드 구현

* fix: 개행 수정

* feat: 결과를 출력하는 기능 구현

* fix: 사용하지 않는 메서드 삭제

* fix: 메서드 명 수정 및 순서 변경

* feat: 결과를 출력하는 기능 구현

* refactor: 프로그래밍 요구 사항(depth, else) 반영

* docs: 체크리스트 업데이트

* fix: 'all' 상수화

* fix: 컨벤션 수정

* fix: System.lineSeparator() 메서드를 사용하여 개행하도록 수정

* fix: 불필요한 public 수정

* fix: try 블럭 내에서 prize 선언 및 초기화 하도록 수정

* refactor: 결과를 Map 으로 저장하여 결과 계산을 한 번만 하도록 리팩토링

* refactor: position 을 직접 변경하지 않도록 리팩토링

* fix: findAny 로 수정

* fix: 컨벤션 수정